--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "icon-sdk-js": "0.0.16",
+    "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-notifications": "^1.4.3",
     "react-scripts": "3.1.2"
   },
   "scripts": {
