--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "icon-sdk-js": "0.0.16",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-notifications": "^1.4.3",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-select": "^3.0.5",
+    "react-slider": "^1.0.0",
+    "react-tabs": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
