--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "main": "./electron.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "bluebird": "^3.7.0",
     "cross-env": "^6.0.0",
     "electron-is-dev": "^1.1.0",
     "icon-sdk-js": "0.0.16",
+    "nedb": "^1.8.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
