--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "icon_voting",
   "version": "0.1.0",
   "private": false,
-  "description": "",
+  "description": "Power Vote app for ICON auto voting for different P-Reps",
   "author": "paradigm",
   "build": {
     "appId": "com.paradigm.icon_voting",
+    "extends": null,
     "linux": {
       "category": "Utility"
     },
