Fixed bug with chunks not found on build

--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     },
     "mac": {
       "category": "Utility"
-    }
+    },
+    "files": [
+      "./build/**/*",
+      "./electron-modules/**/*",
+      "./electron.js"
+    ]
   },
   "license": "ISC",
   "main": "./electron.js",
@@ -38,8 +43,8 @@
     "react-eject": "react-scripts eject",
     "electron": "electron .",
     "electron-build": "electron-builder",
-    "release": "yarn react-build && electron-builder --publish=always",
-    "build": "yarn react-build && yarn electron-build --linux",
+    "release": "yarn react-build && node fixChunks && electron-builder --publish=always",
+    "build": "yarn react-build && node fixChunks && yarn electron-build --linux",
     "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
