--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "icon_voting",
   "version": "0.1.0",
   "private": false,
-  "description": "Power Vote app for ICON auto voting for different P-Reps",
+  "description": "Icon Power Vote app for ICON auto voting for different P-Reps",
   "author": "paradigm",
   "build": {
     "appId": "com.paradigm.icon_voting",
