--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "icon_voting",
   "version": "0.1.0",
   "private": false,
-  "description": "Icon Power Vote app for ICON auto voting for different P-Reps",
+  "description": "Icon Power Vote app for ICX auto voting for different P-Reps",
   "author": "paradigm",
+  "contributors": [
+    "cybor97"
+  ],
   "build": {
     "appId": "com.paradigm.icon_voting",
     "extends": null,
@@ -22,6 +25,7 @@
   "license": "ISC",
   "main": "./electron.js",
   "dependencies": {
+    "auto-launch": "^5.0.5",
     "axios": "^0.19.0",
     "bluebird": "^3.7.0",
     "cross-env": "^6.0.0",
