--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-notifications": "^1.4.3",
     "react-scripts": "3.1.2",
     "react-slider": "^1.0.0",
-    "react-tabs": "^3.0.0"
+    "react-tabs": "^3.0.0",
+    "keytar": "5.0.0-beta.0"
   },
   "scripts": {
     "react-start": "react-scripts start",
